--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
+
+    <meta name="title" content="When will Nintendo Switch Sports release?">
+    <meta name="description" content="A small website by Realmy.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://switchsports.netlify.app/">
+    <meta property="og:title" content="When will Nintendo Switch Sports release?">
+    <meta property="og:description" content="A small website by Realmy.">
+    <meta property="og:image" content="/MetaBanner.png">
+
     <title>When will Nintendo Switch Sports release?</title>
 </head>
+
 <body>
     <div class="center">
         <div class="container">
@@ -17,4 +29,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
