--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="center">
         <div class="container">
-            <h3 class="subtitle">When will Nintendo Switch Sports release?</h3>
+            <h3 class="subtitle">When will Nintendo Switch Sports release?&nbsp;&nbsp;•&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=3XpmB5UfZlc">24/7 stream</a></h3>
             <h1 class="time-left">Loading...</h1>
         </div>
     </div>
